--- a/src/public/css/components.css
+++ b/src/public/css/components.css
@@ -180,7 +180,7 @@
 
 .service-title {
   font-size: 1.25rem;
-  color: #fff;
+  color: var(--text-primary);
   margin-bottom: 15px;
 }
 .service-desc {
